--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: BukkitPlus
 version: '${project.version}'
 main: com.cvs0.bukkitplus.BukkitPlus
 api-version: '1.20'
+
+commands:
+  reloadconfig:
+    description: Reloads the plugin's configuration.
+    usage: /reloadconfig
